Implement unit tests for backend